--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start":"vite",
     "lint": "eslint .",
     "preview": "vite preview"
   },
